Update index.html - Bug - image rendering

--- a/Heist_ML_CTF_Challenge/templates/index.html
+++ b/Heist_ML_CTF_Challenge/templates/index.html
@@ -89,7 +89,7 @@
             embark on their grand journey at a citywide scale. But make no mistake even with current pilot deployment,
             cameras are well capable of detecting and stopping crime.
         </p>
-        <img src="/static/policecar.png" alt="Description of the image" class="centered-image" width="700">
+        <img src="/static/policecar.PNG" alt="Description of the image" class="centered-image" width="700">
     </div>
 </body>
 </html>
